메인 피드백 반영

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -25,9 +25,7 @@
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
-										</video>
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false"></video>
 									</div>
 									<div class="visual__contents">
 										<dov class="visual__inner">
@@ -42,9 +40,7 @@
 								</div>
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
-										</video>
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false"></video>
 									</div>
 									<div class="visual__contents">
 										<dov class="visual__inner">
@@ -59,9 +55,7 @@
 								</div>
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" autostart="false">
-										</video>
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" autostart="false"></video>
 									</div>
 									<div class="visual__contents">
 										<dov class="visual__inner">
@@ -80,19 +74,14 @@
 						<div class="visual__control">
 							<div class="visual__preview">
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
-										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-									</video>
+									<video autoplay loop muted playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video>
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
-										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
-									</video>
+									<video autoplay loop muted playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4"></video>
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted playsinline>
-										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
-									</video>
+									<video autoplay loop muted playsinline><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"></video>
+									<img src="./assets/images/@dummy_seleb03.png" alt="" style="width: 100%; height: 100%;">
 								</div>
 							</div>
 							<div class="marquee">
