아카이브 수정 로그인 작업중

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,9 @@
 					<td>작업중</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td><a href="#" target="_blank">./#</a></td>
+					<td>로그인</td>
+					<td>PC_LOG_1000</td>
+					<td><a href="./member/PC_LOG_1000.html" target="_blank">./member/PC_LOG_1000.html</a></td>
 					<td></td>
 				</tr>
 			</table>
