--- a/src/member/PC_LOG_1003.html
+++ b/src/member/PC_LOG_1003.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	@@include('../inc/pagehead.inc', {
-		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 아이디 찾기",
+		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 비밀번호 찾기",
 		"webroot": "../"
 	})
 	<link rel="stylesheet" href="../assets/css/member.css">
@@ -19,15 +19,15 @@
 				<div class="member__container">
 					<div class="member__header">
 						<div class="member__title">
-							<p class="member__text">아이디찾기</p>
+							<p class="member__text">비밀번호 찾기</p>
 						</div>
 						<p class="member__desc">가입하신 방법에 따라 아이디 찾기가 가능합니다. 법인사업자 회원 또는 외국인 회원의 경우 법인명과 법인번호 또는 이름과 등록번호를 입력해 주세요.</p>
 					</div>
 					<div class="member__body">
 						<div class="member__card">
-							<div module="member_findid">
+							<div module="member_findpasswd">
 								<fieldset>
-									<legend class="a11y">아이디 찾기</legend>
+									<legend class="a11y">비밀번호 찾기</legend>
 									<div class="form">
 										<div class="form__row">
 											<div class="form__label">
@@ -56,6 +56,19 @@
 														<input type="radio" id="check_method2" name="check_method">
 														<label for="check_method2">휴대폰번호</label>
 														<!-- {$form.check_method} -->
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="form__row name">
+											<div class="form__label">
+												<span class="form__text">아이디</span>
+											</div>
+											<div class="form__set">
+												<div class="form__field">
+													<div class="form__col">
+														<input type="text">
+														<!-- {$form.member_id} -->
 													</div>
 												</div>
 											</div>
