--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,18 @@
 					<td><a href="./member/PC_LOG_1006.html" target="_blank">./member/PC_LOG_1006.html</a></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td>회원가입</td>
+					<td>PC_JON_1000</td>
+					<td><a href="./member/PC_JON_1000.html" target="_blank">./member/PC_JON_1000.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>회원가입 > 완료</td>
+					<td>PC_JON_1001</td>
+					<td><a href="./member/PC_JON_1001.html" target="_blank">./member/PC_JON_1001.html</a></td>
+					<td></td>
+				</tr>
 			</table>
 		</div>
 		<footer class="footer"></footer>
