--- a/src/member/PC_LOG_1002.html
+++ b/src/member/PC_LOG_1002.html
@@ -24,49 +24,51 @@
 						<p class="member__desc">고객님 아이디찾기가 완료되었습니다</p>
 					</div>
 					<div class="member__body">
-						<div class="member__card member__card--result">
-							<div module="member_findidresult">
-								<div class="member__noti member__noti--center">
-									<p class="member__text">
-										<i class="member__ico"></i>
-										<span>다음정보로 가입된 아이디가 총 <span class="member__current">1</span>개 있습니다</span>
-										<!-- <span>다음정보로 가입된 아이디가 총 <span class="member__current">{$idCnt}</span>개 있습니다</span> -->
-									</p>
+						<div module="member_findidresult">
+							<div class="member__group">
+								<div class="member__card member__card--result">
+									<div class="member__noti member__noti--center">
+										<p class="member__text">
+											<i class="member__ico"></i>
+											<span>다음정보로 가입된 아이디가 총 <span class="member__current">1</span>개 있습니다</span>
+											<!-- <span>다음정보로 가입된 아이디가 총 <span class="member__current">{$idCnt}</span>개 있습니다</span> -->
+										</p>
+									</div>
+									<div class="member__id">
+										<p class="member__text">Instantfunk12</p>
+									</div>
+									<!-- <div class="member__id">
+										<p class="member__text">{$searchIds}</p>
+									</div> -->
+									<dl class="member__info">
+										<div class="member__row">
+											<dt>EMAIL</dt>
+											<dd class="member__large">instantfunk12@naver.com</dd>
+											<dd>484********(개인회원 2021-02-01가입)</dd>
+										</div>
+										<div class="member__row">
+											<dt>NAME</dt>
+											<dd class="member__large">홍길동</dd>
+										</div>
+									</dl>
+									<!-- <dl class="member__info">
+										<div class="member__row">
+											<dt>{$searchType}</dt>
+											<dd>{$searchInfo}</dd>
+											<dd>{$searchIds}</dd>
+										</div>
+										<div class="member__row">
+											<dt>NAME</dt>
+											<dd>{$name}</dd>
+										</div>
+									</dl> -->
 								</div>
-								<div class="member__id">
-									<p class="member__text">Instantfunk12</p>
+								<div class="button">
+									<div class="button__container">
+										<a href="#" class="button__item button__item--black button__item--large">로그인</a>
+										<a href="#" class="button__item button__item--large">홈으로</a>
+									</div>
 								</div>
-								<!-- <div class="member__id">
-									<p class="member__text">{$searchIds}</p>
-								</div> -->
- 								<dl class="member__info">
-									<div class="member__row">
-										<dt>EMAIL</dt>
-										<dd class="member__large">instantfunk12@naver.com</dd>
-										<dd>484********(개인회원 2021-02-01가입)</dd>
-									</div>
-									<div class="member__row">
-										<dt>NAME</dt>
-										<dd class="member__large">홍길동</dd>
-									</div>
-								</dl>
-								<!-- <dl class="member__info">
-									<div class="member__row">
-										<dt>{$searchType}</dt>
-										<dd>{$searchInfo}</dd>
-										<dd>{$searchIds}</dd>
-									</div>
-									<div class="member__row">
-										<dt>NAME</dt>
-										<dd>{$name}</dd>
-									</div>
-								</dl> -->
-							</div>
-						</div>
-						<div class="button">
-							<div class="button__container">
-								<a href="#" class="button__item button__item--black button__item--large">로그인</a>
-								<a href="#" class="button__item button__item--large">홈으로</a>
 							</div>
 						</div>
 					</div>
