--- a/src/member/PC_LOG_1001.html
+++ b/src/member/PC_LOG_1001.html
@@ -24,114 +24,122 @@
 						<p class="member__desc">가입하신 방법에 따라 아이디 찾기가 가능합니다. 법인사업자 회원 또는 외국인 회원의 경우 법인명과 법인번호 또는 이름과 등록번호를 입력해 주세요.</p>
 					</div>
 					<div class="member__body">
-						<div class="member__card">
-							<div module="member_findid">
+						<div module="member_findid">
+							<div class="member__group">
 								<fieldset>
 									<legend class="a11y">아이디 찾기</legend>
-									<div class="form">
-										<div class="form__row">
-											<div class="form__label">
-												<label for="searchType" class="form__text">회원유형</label>
-											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col">
-														<div class="select">
-															<select>
-																<option value="indi" selected="selected">개인회원</option>
-																<option value="indibuis">개인 사업자회원</option>
-																<option value="corp">법인 사업자회원</option>
-																<option value="fore">외국인회원</option>
-															</select>
-															<!-- {$form.searchType} -->
+									<div class="member__card">
+										<div class="form">
+											<div class="form__row">
+												<div class="form__label">
+													<label for="searchType" class="form__text">회원유형</label>
+												</div>
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col">
+															<div class="select">
+																<select>
+																	<option value="indi" selected="selected">개인회원</option>
+																	<option value="indibuis">개인 사업자회원</option>
+																	<option value="corp">법인 사업자회원</option>
+																	<option value="fore">외국인회원</option>
+																</select>
+																<!-- {$form.searchType} -->
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col form__col--offset">
+															<div class="check">
+																<div class="check__inner">
+																	<input type="radio" id="check_method1" name="check_method" checked>
+																	<label for="check_method1">이메일</label>
+																</div>
+																<div class="check__inner">
+																	<input type="radio" id="check_method2" name="check_method">
+																	<label for="check_method2">휴대폰번호</label>
+																</div>
+															</div>
+															<!-- {$form.check_method} -->
 														</div>
 													</div>
 												</div>
 											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col form__col--offset">
-														<input type="radio" id="check_method1" name="check_method" checked>
-														<label for="check_method1">이메일</label>
-														<input type="radio" id="check_method2" name="check_method">
-														<label for="check_method2">휴대폰번호</label>
-														<!-- {$form.check_method} -->
+											<div id="name_view" class="form__row name">
+												<div class="form__label">
+													<span id="name_lable" class="form__text">이름</span>
+												</div>
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.name} -->
+														</div>
 													</div>
 												</div>
 											</div>
-										</div>
-										<div id="name_view" class="form__row name">
-											<div class="form__label">
-												<span id="name_lable" class="form__text">이름</span>
-											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.name} -->
+											<div id="ssn_view" class="form__row ssn_no">
+												<div class="form__label">
+													<span id="ssn_name" class="form__text">법인번호로 찾기</span>
+												</div>
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.ssn1} -->
+														</div>
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.ssn2} -->
+														</div>
 													</div>
 												</div>
 											</div>
-										</div>
-										<div id="ssn_view" class="form__row ssn_no">
-											<div class="form__label">
-												<span id="ssn_name" class="form__text">법인번호로 찾기</span>
-											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.ssn1} -->
-													</div>
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.ssn2} -->
+											<div id="email_view" class="form__row email">
+												<div class="form__label">
+													<span class="form__text">이메일로 찾기</span>
+												</div>
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.email} -->
+														</div>
 													</div>
 												</div>
 											</div>
-										</div>
-										<div id="email_view" class="form__row email">
-											<div class="form__label">
-												<span class="form__text">이메일로 찾기</span>
-											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.email} -->
-													</div>
+											<div id="mobile_view" class="form__row mobile">
+												<div class="form__label">
+													<span class="form__text">휴대폰 번호로 찾기</span>
 												</div>
-											</div>
-										</div>
-										<div id="mobile_view" class="form__row mobile">
-											<div class="form__label">
-												<span class="form__text">휴대폰 번호로 찾기</span>
-											</div>
-											<div class="form__set">
-												<div class="form__field">
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.mobile1} -->
-													</div>
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.mobile2} -->
-													</div>
-													<div class="form__col">
-														<input type="text">
-														<!-- {$form.mobile3} -->
+												<div class="form__set">
+													<div class="form__field">
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.mobile1} -->
+														</div>
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.mobile2} -->
+														</div>
+														<div class="form__col">
+															<input type="text">
+															<!-- {$form.mobile3} -->
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
+									<div class="button">
+										<div class="button__container">
+											<a href="#" class="button__item button__item--black button__item--large">확인</a>
+											<a href="#" class="button__item button__item--large">취소</a>
+										</div>
+									</div>
 								</fieldset>
-							</div>
-						</div>
-						<div class="button">
-							<div class="button__container">
-								<a href="#" class="button__item button__item--black button__item--large">확인</a>
-								<a href="#" class="button__item button__item--large">취소</a>
 							</div>
 						</div>
 					</div>
