--- a/src/member/PC_LOG_1004.html
+++ b/src/member/PC_LOG_1004.html
@@ -23,46 +23,48 @@
 						</div>
 					</div>
 					<div class="member__body">
-						<div class="member__card member__card--board">
-							<div module="member_findpasswdmethod">
+						<div module="member_findpasswdmethod">
+							<div class="member__group">
 								<fieldset>
 									<legend class="a11y">임시 비밀번호 전송</legend>
-									<div class="board">
-										<div class="board__row">
-											<div class="board__left">
-												<p class="board__text">전송할곳</p>
+									<div class="member__card member__card--board">
+										<div class="board">
+											<div class="board__row">
+												<div class="board__left">
+													<p class="board__text">전송할곳</p>
+												</div>
+												<div class="board__right">
+													<p class="board__text">이메일</p>
+													<!-- <p class="board__text">{$form.passwd_method_type}</p> -->
+												</div>
 											</div>
-											<div class="board__right">
-												<p class="board__text">이메일</p>
-												<!-- <p class="board__text">{$form.passwd_method_type}</p> -->
+											<div id="{$passwd_method_email_info}" class="board__row">
+												<div class="board__left">
+													<p class="board__text">이메일</p>
+												</div>
+												<div class="board__right">
+													<p class="board__text">Instantfunk12@naver.com</p>
+													<!-- <p class="board__text">{$passwd_method_email}</p> -->
+												</div>
 											</div>
-										</div>
-										<div id="{$passwd_method_email_info}" class="board__row">
-											<div class="board__left">
-												<p class="board__text">이메일</p>
-											</div>
-											<div class="board__right">
-												<p class="board__text">Instantfunk12@naver.com</p>
-												<!-- <p class="board__text">{$passwd_method_email}</p> -->
-											</div>
-										</div>
-										<div id="{$passwd_method_email_info}" class="board__row">
-											<div class="board__left">
-												<p class="board__text">휴대폰 번호</p>
-											</div>
-											<div class="board__right">
-												<p class="board__text">010-1000-1111</p>
-												<!-- <p class="board__text">{$passwd_method_mobile}</p> -->
+											<div id="{$passwd_method_email_info}" class="board__row">
+												<div class="board__left">
+													<p class="board__text">휴대폰 번호</p>
+												</div>
+												<div class="board__right">
+													<p class="board__text">010-1000-1111</p>
+													<!-- <p class="board__text">{$passwd_method_mobile}</p> -->
+												</div>
 											</div>
 										</div>
 									</div>
+									<div class="button">
+										<div class="button__container">
+											<a href="#" class="button__item button__item--black button__item--large">임시비밀번호 전송</a>
+											<a href="#" class="button__item button__item--large">취소</a>
+										</div>
+									</div>
 								</fieldset>
-							</div>
-						</div>
-						<div class="button">
-							<div class="button__container">
-								<a href="#" class="button__item button__item--black button__item--large">임시비밀번호 전송</a>
-								<a href="#" class="button__item button__item--large">취소</a>
 							</div>
 						</div>
 					</div>
