--- a/src/member/PC_LOG_1005.html
+++ b/src/member/PC_LOG_1005.html
@@ -26,24 +26,26 @@
 						<p class="member__desc {$display_mobile_method|display}">임시 비밀번호가 고객님 휴대폰 번호로 전송되었습니다.</p> -->
 					</div>
 					<div class="member__body">
-						<div class="member__card member__card--result">
-							<div module="member_findpasswdresult">
-								<p class="member__temporary">
-									<span class="member__semibold">Instantfunk12</span> 회원님 임시 비밀번호를<br>
-									<span class="member__semibold">Instant@naver.com</span> 으로 보내드렸습니다<br>
-									고객님 즐거운 쇼핑 하세요!
-								</p>
-								<!-- <p class="member__temporary">
-									<span class="member__semibold">{$id}</span> 회원님 임시 비밀번호를<br>
-									<span class="member__semibold {$display_email_method|display}">{$email}</span><span class="member__semibold {$display_mobile_method|display}">{$mobile}</span> 으로 보내드렸습니다<br>
-									고객님 즐거운 쇼핑 하세요!
-								</p> -->
-							</div>
-						</div>
-						<div class="button">
-							<div class="button__container">
-								<a href="#" class="button__item button__item--black button__item--large">로그인</a>
-								<a href="#" class="button__item button__item--large">홈으로</a>
+						<div module="member_findpasswdresult">
+							<div class="member__group">
+								<div class="member__card member__card--result">
+									<p class="member__temporary">
+										<span class="member__semibold">Instantfunk12</span> 회원님 임시 비밀번호를<br>
+										<span class="member__semibold">Instant@naver.com</span> 으로 보내드렸습니다<br>
+										고객님 즐거운 쇼핑 하세요!
+									</p>
+									<!-- <p class="member__temporary">
+										<span class="member__semibold">{$id}</span> 회원님 임시 비밀번호를<br>
+										<span class="member__semibold {$display_email_method|display}">{$email}</span><span class="member__semibold {$display_mobile_method|display}">{$mobile}</span> 으로 보내드렸습니다<br>
+										고객님 즐거운 쇼핑 하세요!
+									</p> -->
+								</div>
+								<div class="button">
+									<div class="button__container">
+										<a href="#" class="button__item button__item--black button__item--large">로그인</a>
+										<a href="#" class="button__item button__item--large">홈으로</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
