로그인 수정

--- a/src/member/PC_JON_1001.html
+++ b/src/member/PC_JON_1001.html
@@ -19,7 +19,7 @@
 				<div class="member__container member__container--join-result">
 					<div class="member__header">
 						<div class="member__title">
-							<p class="member__text"><img src="../assets/images/img_welcome.png" alt=""></p>
+							<p class="member__text">WELC<span>O</span>ME</p>
 						</div>
 					</div>
 					<div class="member__body">
