마이페이지 작업중

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,24 @@
 					<td><a href="./member/PC_JON_1001.html" target="_blank">./member/PC_JON_1001.html</a></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td>마이페이지</td>
+					<td>PC_MYP_1000</td>
+					<td><a href="./myshop/PC_MYP_1000.html" target="_blank">./member/PC_MYP_1000.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 주문내역조회</td>
+					<td>PC_MYP_1001</td>
+					<td><a href="./myshop/PC_MYP_1001.html" target="_blank">./member/PC_MYP_1001.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 주문내역조회 > 주문상세조회</td>
+					<td>PC_MYP_1002</td>
+					<td><a href="./myshop/PC_MYP_1002.html" target="_blank">./member/PC_MYP_1002.html</a></td>
+					<td></td>
+				</tr>
 			</table>
 		</div>
 		<footer class="footer"></footer>
