마이페이지

--- a/src/myshop/PC_MYP_1001.html
+++ b/src/myshop/PC_MYP_1001.html
@@ -82,6 +82,7 @@
 											</div>
 											<div class="product__thead">
 												<div class="product__tr">
+													<div class="product__td">&nbsp;</div>
 													<div class="product__td">상품정보</div>
 													<div class="product__td">주문일자/주문번호</div>
 													<div class="product__td">수량</div>
